2002-05-17  Stefan Petersen  <spe@stacken.kth.se>

	* acconfig.h, configure.in, src/gerbv.c, scm_gerber.c:
	  Prepared phase out of Guile by changing default to exclude
	  Guile inclusion.Change flag disable-batch to enable-batch 
	  during configure and changing the variable NO_GUILE to 
	  GUILE_IN_USE.

	
2002-05-10  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerb_image.*, src/gerber.*, src/gerbv.c: Moved verify_gerb
	  to gerb_image and renamed it to gerb_image_verify so drill file
	  parsing and gerber file parsing could split them. Done after 
	  receiveing Excellon file without drillfile sizes (Innoveda/PADS
	  Power PCB) from Dino Ghilardi.
	* src/gerb_file.c: Improved error reporting.
	

2002-05-08  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c (zoom_outline): Prevent division by zero by
	disallowing too small zoom areas in outline mode. Allocate a
	separate outline zoom color. Center outline zoom area instead
	of using upper left corner as translation points.

2002-05-08  Stefan Petersen  <spe@stacken.kth.se>

	* INSTALL: Changed gschem->gerbv
	* src/gerbv.c: Remember where we loaded file from last time and
	  start file selection from there.

	
2002-05-07  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c (zoom_outline): Added zoom outline support and
	scaled zoom step (zoom 10% of current scale instead of a fixed
	number of 10). Some comments in old code. The outline drawing could
	probably be optimized quite a bit (it currently piggybacks on the
	expose event). With this functionality it is easier to note the
	excessive memory usage when zooming in too far.

-- Release 0.0.8 --
	
	
2002-05-05  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in: Updated VERSION.
	* src/gerbv.c: If gerbv was started without any files loaded,
	  the watch mouse pointer was running all the time.
	

2002-05-03  Anders Eriksson  <anders@umunet.org>

	* AUTHORS: Corrected my e-mail address

2002-05-02  Anders Eriksson  <anders@umunet.org>
